// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts component renders blank slate if not posts 1`] = `
<div
  className="ui icon message"
>
  <i
    aria-hidden="true"
    className="smile icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      No hay posts!
    </div>
    <p>
      Prueba recargando la página para intentar descargar los últimos posts.
    </p>
  </div>
</div>
`;

exports[`Posts component renders error message when fetching posts fails 1`] = `
<div
  className="ui icon negative message"
>
  <i
    aria-hidden="true"
    className="frown icon"
  />
  <div
    className="content"
  >
    <div
      className="header"
    >
      Houston, tenemos un problema!
    </div>
    <p>
      Intenta recargar la página. Error: network error
    </p>
  </div>
</div>
`;

exports[`Posts component renders placeholder when fetching posts 1`] = `
<div
  className="ui four cards"
>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <div
      className="animated-background"
    >
      <div
        className="ph-post-img"
      />
      <div
        className="bg-masker top-separator"
      />
      <div
        className="bg-masker left-separator"
      />
      <div
        className="bg-masker right-separator"
      />
      <div
        className="bg-masker mid-separator"
      />
      <div
        className="bg-masker date-separator"
      />
      <div
        className="bg-masker extra-separator"
      />
      <div
        className="bg-masker bottom-separator"
      />
    </div>
  </div>
</div>
`;

exports[`Posts component renders posts 1`] = `
<div
  className="ui four cards"
>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <img
      className="ui image"
      src=""
      style={
        Object {
          "height": 199.8,
        }
      }
    />
    <div
      className="content"
    >
      <a
        className="header"
        href="/post/1"
        onClick={[Function]}
      >
        post-title-1
      </a>
      <div
        className="meta"
      >
        <time
          dateTime="2017-12-22T05:28:22.005Z"
          title="2017-12-22 05:28"
        >
          hace 1 hora
        </time>
      </div>
    </div>
    <div
      className="extra content"
    >
      <img
        className="ui avatar image"
        src="medium-avatar-1"
      />
      owner-nick-1
    </div>
  </div>
  <div
    className="ui card"
    href={undefined}
    onClick={[Function]}
  >
    <img
      className="ui image"
      src=""
      style={
        Object {
          "height": 199.8,
        }
      }
    />
    <div
      className="content"
    >
      <a
        className="header"
        href="/post/2"
        onClick={[Function]}
      >
        post-title-2
      </a>
      <div
        className="meta"
      >
        <time
          dateTime="2017-12-22T05:28:32.005Z"
          title="2017-12-22 05:28"
        >
          hace 1 hora
        </time>
      </div>
    </div>
    <div
      className="extra content"
    >
      <img
        className="ui avatar image"
        src="medium-avatar-2"
      />
      owner-nick-2
    </div>
  </div>
</div>
`;
